--- a/Props/index.html
+++ b/Props/index.html
@@ -18,8 +18,22 @@
 </html>
 <script type="text/babel">
 
-  class Board extends React.Component{ renderSquare(i){ return
-  <Square value={i}>; } }
+    class Square extends React.Component {
+        render() {
+            return (
+                <button className="square">
+                    {this.props.value}
+                </button>
+            );
+        }
+    }
+    class Board extends React.Component {
+        renderSquare(i) {
+            return <Square value={i}/>;
+        }
+    }
+
+
 
 
 
