--- a/lists&&keys/lists-test.html
+++ b/lists&&keys/lists-test.html
@@ -8,19 +8,16 @@
     <script src="../build/browser.min.js"></script>
 </head>
 <body>
-<div id="root"></div>
 <div id="app"></div>
 </body>
 </html>
 <script type="text/babel">
-    const numbers = [1, 2, 3, 4, 5];
-    const listItems = numbers.map((numbers) =>
-        <li>{numbers}</li>
+    const  Items = ['chengzi','qiong','Hello'];
+    const ItemList = Items.map((item)=>
+       <li>{item}</li>
     );
-
     ReactDOM.render(
-    <ul>{listItems}</ul>,
-    document.getElementById('root')
-    );
-
+      <ul>{ItemList}</ul>,
+      document.getElementById('app')
+    )
 </script>
