--- a/forms/file-input.html
+++ b/forms/file-input.html
@@ -23,7 +23,7 @@
         }
         render(){
             return (
-                <form onSubmit="handleSubmit">
+                <form onSubmit={this.handleSubmit}>
                     <label>
                         Upload file:
                         <input type="file" ref={input=>{
